chores:added comment to index html

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
         <div>
             <p>&copy Copyright <a href="https://github.com/KathidB">Kathid</a> 2022</p>
+            <!-- written by Bogusz B. -->
         </div>
     </footer>
 
